maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:7: error: ';' expected but '=' found.
  (xSortie, ySortie) = chercherSortie
                     ^ShortestPathMaze:19: error: ';' expected but ',' found.
        return xSortie, ySortie
                      ^